Added Index copy

--- a/index copy.html
+++ b/index copy.html
@@ -179,11 +179,12 @@ https://templatemo.com/tm-545-finance-business
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" onclick="submitForm()" class="btn btn-primary">Submit</button>
+        <button type="submit" form="loanForm" class="btn btn-primary">Submit</button>
+      </div>
     </div>
   </div>
 </div>
-    <div class="request-form">
+    <!-- <div class="request-form">
       <div class="container">
         <div class="row">
           <div class="col-md-8">
@@ -195,7 +196,7 @@ https://templatemo.com/tm-545-finance-business
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="services">
       <div class="container">
@@ -240,7 +241,7 @@ https://templatemo.com/tm-545-finance-business
       </div>
     </div>
 
-    <div class="fun-facts">
+    <!-- <div class="fun-facts">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
@@ -282,7 +283,7 @@ https://templatemo.com/tm-545-finance-business
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="more-info">
       <div class="container">
@@ -310,7 +311,7 @@ https://templatemo.com/tm-545-finance-business
       </div>
     </div>
 
-    <div class="testimonials">
+    <!-- <div class="testimonials">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -362,7 +363,7 @@ https://templatemo.com/tm-545-finance-business
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="callback-form">
       <div class="container">
@@ -410,7 +411,7 @@ https://templatemo.com/tm-545-finance-business
       </div>
     </div>
 
-    <div class="partners">
+    <!-- <div class="partners">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -440,7 +441,7 @@ https://templatemo.com/tm-545-finance-business
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
 
     <!-- Footer Starts Here -->
