--- a/contact.html
+++ b/contact.html
@@ -300,6 +300,37 @@ https://templatemo.com/tm-545-finance-business
     <script src="assets/js/owl.js"></script>
     <script src="assets/js/slick.js"></script>
     <script src="assets/js/accordions.js"></script>
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript">
+    (function () {
+        emailjs.init("bIDz4bcq5JODVz-pC"); // Replace 'YOUR_USER_ID' with your actual EmailJS user ID
+    })();
+</script>
+<script type="text/javascript">
+  document.getElementById("contact").addEventListener("submit", function (event) {
+      event.preventDefault(); // Prevent the default form submission
+
+      // Send form data using EmailJS
+      emailjs.sendForm("service_345e4wd", "template_miy178e", this).then(
+          function () {
+              alert("Message sent successfully!");
+
+              // Hide the form after submission
+              document.querySelector(".callback-form .contact-form").style.display = "none";
+
+              // Optionally, display a success message
+              let successMessage = document.createElement("div");
+              successMessage.className = "alert alert-success";
+              successMessage.innerText = "Thank you for your message. We will get back to you soon!";
+              document.querySelector(".callback-form .container .row").appendChild(successMessage);
+          },
+          function (error) {
+              alert("Failed to send message. Error: " + JSON.stringify(error));
+          }
+      );
+  });
+</script>
+  </script>
 
     <script language = "text/Javascript"> 
       cleared[0] = cleared[1] = cleared[2] = 0; //set a cleared flag for each field
